fix-card-width-overflow

--- a/app/assets/stylesheets/card.css.scss
+++ b/app/assets/stylesheets/card.css.scss
@@ -20,6 +20,7 @@
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   border-radius: 5px;
   margin: 10px;
+  width: 350px;
   .card-img-top img {
     width: 350px; 
     height: 225px;}
